# payment-gateway-challenge-python

./: .env.example  .gitignore  README.md  main.py  payment_gateway_api.yaml  pyproject.toml
payment_gateway_api/: app.py  clients.py  exceptions.py  mappers.py  models.py  repositories.py  services.py  settings.py  validators.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_bank_client.py  test_payment_service.py  test_payment_validator.py
