[tool.poetry]
name = "payment-gateway-api"
version = "0.1.0"
description = "Payment Gateway API"
authors = ["Author <author@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
uvicorn = "^0.41.0"
gunicorn = "^25.1.0"
fastapi = "^0.129.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
requests = "^2.32.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.3.1"]
build-backend = "poetry.core.masonry.api"

[pytest]
asyncio_mode = "auto"
